# Simple_MPC

./: CMakeLists.txt  README.md  main.cpp
include/: model.hpp  mpc.hpp  utils.hpp
src/: model.cpp  mpc.cpp
test/: test.cpp
